--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -20,6 +20,40 @@ Wenn kein eindeutiges TVD-Phasenmodell existiert, muss ein idealtypisches konstr
 TVD lebt zwar von Iteration und Flexibilität, aber zur Bewertung der Anschlussfähigkeit an HOAI, AHO, Projektstufen etc. wird eine klar definierte Prozesslogik benötigt.
 Das idealtypisches Phasenmodell erhebt kein Anspruch auf Normierung ist, sondern dient im Rahmen dieser Untersuchung als ein analytisches Hilfsmittel.\\
 
+\clearpage
+
+\textbf{Phasen die sich aus Ballard et. al (2025)\autocite[]{ballard_target_2025} indirekt ergeben:}\\
+
+\textbf{Phase 1 – Project Definition \& Validation} (Pre-Design)\\
+- Klären der Projektziele, der Business-Case-Anforderungen und der Allowable Cost (AC).\\
+- Durchführung einer Validation, ob das Projekt im gegebenen Rahmen überhaupt möglich ist.\\
+Zentrale Outputs: Functional Program, Facility Program, Allowable Cost, erste Machbarkeitsprüfung.
+
+\textbf{Phase 2 – Establishing Targets} (Value \& Cost Target Setting)\\
+- Ableitung des Estimated Cost aus funktionalen Anforderungen.\\
+- Vergleich Allowable Cost vs. Estimated Cost.\\
+- Dokumentation aller Zielgrößen im Target Value Statement.\\
+- Zentrale Outputs: Target Cost, Value Targets, Target Value Statement.
+
+\textbf{Phase 3 – Project Execution Planning} (Design-to-Target Planning)\\
+- Entwicklung des Project Execution Plan (PEP) als Roadmap.\\
+- Definition der Steuerungsmechanismen, Kostenmodelle, Tracking-Tools.
+
+\textbf{Phase 4 – Steering During Design} (Design Phase Steering)\\
+- Anwendung von Konzepten wie Set-Based Design.\\
+- System- und Komponenten-Targets werden definiert und fortlaufend geschärft.\\
+- Kontinuierliche Soll-Ist-Vergleiche (Steering to Targets).
+
+\textbf{Phase 5 – Steering During Construction}\\
+- Weiterführung des Steering-Prozesses in der Ausführung.\\
+- Monitoring der Kostenentwicklung in Bezug auf Target Cost und Value Targets.\\
+
+
+
+
+Für die Modellierung des idealtypischen TVD-Prozesses wird in dieser Arbeit ein 4-Phasen-Modell zugrunde gelegt. Diese Struktur stellt eine Synthese aus dem 5-Phasen-Modell des LCI Practitioner Guidebooks (2016) und dem Prozess-Schema nach Ballard (2012)  dar.
+Während das LCI-Modell 'Design' und 'Construction' in einer übergeordneten Phase ('Value Delivery') zusammenfasst , nimmt das hier entwickelte Modell eine explizite Trennung in Phase 2 (Design) und Phase 3 (Umsetzung) vor. Diese Differenzierung erfolgt im Hinblick auf die spätere Transferanalyse (Kapitel 5), um eine präzise Gegenüberstellung mit der in Deutschland strukturell verankerten Trennung von Planungs- und Ausführungsphasen (gemäß HOAI) zu ermöglichen, ohne dabei die iterative Logik des TVD aufzugeben\\
+
 Erster Entwurf/Wahl des Phasenmodells\\
 
 0 - Projekt Framing und Value Desfinition\\
@@ -28,5 +62,30 @@ Erster Entwurf/Wahl des Phasenmodells\\
 3 - Validate, Commit \& Learn (Gate/Lesson)\\
 
 
+\clearpage
+
+\subsection{Phase 0 - Projektdefinition und Wertbestimmung}
+\label{sec:4.2}
+eng. Project Definition \& Value Definition
+
+“TVD begins in the project definition phase, starting with the development of a project business case and culminating in a funding decision.”
+“At the heart of TVD is the practice of setting project budgets based on the worth to the client of the asset to be constructed.”
+“A business plan validation study may take as little as three weeks and as long as three months…”
+“Engage the key members of the project team to validate the client’s business case…”
+\autocite[S. 2]{ballard_target_2012}
+
+Testzitat \autocite[S.1]{hill_target_2017}
 
 
+\subsection{Phase 1 - Zielkostenentwicklung}
+\label{sec:4.3}
+eng. Target Costing \& Target Definition
+
+
+\subsection{Phase 2 - Zielkostenentwicklung}
+\label{sec:4.3}
+eng. Target Costing \& Target Definition
+
+\subsection{Phase 3 - Zielkostenentwicklung}
+\label{sec:4.3}
+eng. Target Costing \& Target Definition
