--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,77 @@
 
+@book{ballard_target_2025,
+	address = {Newcastle upon Tyne},
+	edition = {1},
+	title = {Target {Value} {Delivery} in {Building} {Projects}},
+	publisher = {Cambridge Scholars Publishing},
+	author = {Ballard, G. and Morris, P.},
+	year = {2025},
+	keywords = {yet to read},
+}
+
+@incollection{ballard_target_2012,
+	address = {Zagreb},
+	series = {{DS} / {Design} {Society}},
+	title = {Target {Value} {Design}},
+	url = {https://www.designconference.org/},
+	abstract = {The applicability of product development managerial innovations such as target costing, concurrent engineering and supply chain management to construction projects has not been adequately evaluated. This paper is a contribution to that evaluation, present},
+	number = {70},
+	booktitle = {{DS} 70: {Proceedings} of {DESIGN} 2012, the 12th {International} {Design} {Conference}, {Dubrovnik}, {Croatia}},
+	publisher = {The Design Society},
+	author = {Ballard, G.},
+	editor = {Marjanovic, D. and Storga, M. and Pavkovic, N. and Bojcetic, N.},
+	year = {2012},
+	pages = {11--22},
+}
+
+@book{hill_target_2017,
+	address = {Arlington, VA},
+	edition = {2.},
+	title = {Target {Value} {Delivery}: {Practitioner} {Guidebook} to {Implementation} – {Current} {State} 2016},
+	publisher = {Lean Construction Institute},
+	editor = {Hill, K. and Copeland, K. and Pike, C.},
+	year = {2017},
+}
+
+@book{seed_transforming_2015,
+	address = {Arlington, VA},
+	title = {Transforming design and construction: a framework for change},
+	isbn = {978-0-578-16842-5},
+	shorttitle = {Transforming design and construction},
+	language = {eng},
+	publisher = {Lean Construction Institute},
+	editor = {Seed, William R.},
+	year = {2015},
+	note = {OCLC: 961912818},
+}
+
+@book{seed_transforming_2015-1,
+	address = {Arlington, VA},
+	title = {Transforming design and construction: a framework for change},
+	isbn = {978-0-578-16842-5},
+	shorttitle = {Transforming design and construction},
+	language = {eng},
+	publisher = {Lean Construction Institute},
+	editor = {Seed, William R.},
+	year = {2015},
+	note = {OCLC: 961912818},
+}
+
+@book{noauthor_notitle_nodate,
+}
+
+@misc{team_how_2019,
+	title = {How {Preconstruction} {Decisions} {Impact} {Project} {Outcomes}},
+	url = {https://join.build/news/how-to-preconstruction-decisions-impact-project-outcomes/},
+	abstract = {Making changes earlier in a project is cheaper and more impactful. This easily understood intuition was formalized by Patrick MacLeamy...},
+	language = {en-US},
+	urldate = {2025-11-10},
+	journal = {Join},
+	author = {Team, Join},
+	month = may,
+	year = {2019},
+}
+
 @book{lamnek_qualitative_2016,
 	address = {Weinheim},
 	edition = {6., vollständig überarbeitete Aufl},
@@ -237,15 +310,6 @@ Section: Research Methods \&amp; Reporting},
 	year = {2016},
 }
 
-@book{ballard_target_2025,
-	title = {Target {Value} {Delivery} in {Building} {Projects}},
-	isbn = {1-0364-0575-3},
-	publisher = {Cambridge Scholars Publishing},
-	author = {Ballard, Glenn and Morris, Peter},
-	year = {2025},
-	keywords = {yet to read},
-}
-
 @book{becker_prozessmanagement_2012,
 	address = {Berlin, Heidelberg},
 	title = {Prozessmanagement: {Ein} {Leitfaden} zur prozessorientierten {Organisationsgestaltung}},
@@ -285,18 +349,6 @@ Section: Research Methods \&amp; Reporting},
 	editor = {Fiedler, Martin},
 	year = {2018},
 	doi = {10.1007/978-3-662-55337-4},
-}
-
-@book{seed_target_2015,
-	address = {Arlington, VA},
-	title = {Target {Value} {Delivery} - {Practitioner} {Guidebook} to {Implementation}},
-	isbn = {978-0-578-16842-5},
-	shorttitle = {Transforming design and construction},
-	language = {en},
-	publisher = {Lean Construction Institute},
-	editor = {Seed, William R.},
-	year = {2015},
-	note = {OCLC: 961912818},
 }
 
 @article{oliva_target_2024,
@@ -713,12 +765,6 @@ Section: Research Methods \&amp; Reporting},
 	note = {Artwork Size: pages 497 Seiten : Illustrationen, Diagramme
 Publisher: RWTH Aachen University},
 	pages = {pages 497 Seiten : Illustrationen, Diagramme},
-}
-
-@article{ballard_target_nodate,
-	title = {{TARGET} {VALUE} {DESIGN}},
-	language = {en},
-	author = {Ballard, G},
 }
 
 @article{gimenez_exploring_2022,
