--- a/01_frontmatter/00_titlepage.tex
+++ b/01_frontmatter/00_titlepage.tex
@@ -35,7 +35,7 @@
         \textbf{E-Mail:} & \emailadresse \\[0.5cm]
         
         \textbf{Erstprüfer:} & \professor \\
-        \textbf{Erstbetreuer:} & \erstbetreuer \\
+        \textbf{Erstbetreuerin:} & \erstbetreuer \\
         \textbf{Zweitbetreuer:} & \zweitbetreuer \\[0.5cm]
         
         \textbf{Bearbeitungszeitraum:} & \bearbeitungszeitraum \\
