--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 
 \pagenumbering{gobble}  % Schaltet Seitenzahlen komplett aus
 \input{01_frontmatter/00_titlepage}
-\input{01_frontmatter/03_expose}
+%\input{01_frontmatter/03_expose}
 \input{01_frontmatter/01_abstract}
 
 
@@ -30,7 +30,7 @@
 \input{02_mainmatter/ch3_Methodik}
 \input{02_mainmatter/ch4_Analyse}
 \input{02_mainmatter/ch5_Transfer}
-\input{02_mainmatter/ch6_Infrastruktur}
+%\input{02_mainmatter/ch6_Infrastruktur}
 \input{02_mainmatter/ch7_Fazit}
 
 % === LITERATURVERZEICHNIS ===
