Updates from Overleaf

--- a/01_frontmatter/01_abstract.tex
+++ b/01_frontmatter/01_abstract.tex
@@ -1,6 +1,7 @@
 \cleardoublepage
 \phantomsection
 \chapter*{Abstract}
-\markright{Abstract} % Setzt die Kopfzeile
+% KEIN \markright hier - das aktiviert die Kopfzeile und Seitenzahl
+\thispagestyle{empty}  % Keine Seitenzahl auf dieser Seite
 
-“Target Value Design in Construction: A Structured and Process-Oriented Analysis within the German Context.”
+"Target Value Design in Construction: A Structured and Process-Oriented Analysis within the German Context."
