--- a/01_frontmatter/02_acknowledgements.tex
+++ b/01_frontmatter/02_acknowledgements.tex
@@ -1,3 +1,4 @@
 \cleardoublepage
+\phantomsection
 \chapter*{Vorwort}
-\markright{Vorwort}
+\thispagestyle{empty}  % Keine Seitenzahl auf dieser Seite
