Updates from Overleaf

--- a/01_frontmatter/01_abstract.tex
+++ b/01_frontmatter/01_abstract.tex
@@ -4,4 +4,4 @@
 % KEIN \markright hier - das aktiviert die Kopfzeile und Seitenzahl
 \thispagestyle{empty}  % Keine Seitenzahl auf dieser Seite
 
-"Target Value Design in Construction: A Structured and Process-Oriented Analysis within the German Context."
+\enquote{Target Value Design in Construction: A Structured and Process-Oriented Analysis within the German Context.}
