--- a/01_frontmatter/02_acknowledgements.tex
+++ b/01_frontmatter/02_acknowledgements.tex
@@ -1,4 +1,4 @@
 \cleardoublepage
-\phantomsection
 \chapter*{Vorwort}
+% KEIN \markright hier - das aktiviert die Kopfzeile und Seitenzahl
 \thispagestyle{empty}  % Keine Seitenzahl auf dieser Seite
