Updates from Overleaf

--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -36,24 +36,31 @@ Erster Entwurf/Wahl des Phasenmodells\\
 
 \section{Phase 0 - Projektdefinition und Wertbestimmung}
 \label{sec:4.2}
-eng. Project Definition \& Value Definition
+Die Phase der Projektdefinition und Wertbestimmung (Phase 0) bildet das fundamentale Ausgangsniveau des Target Value Design, in dem die Projektziele und der finanzielle Rahmen (Allowable Cost) ausschließlich auf Basis des Business Case und losgelöst von spezifischen Designlösungen festgelegt werden\autocite[S. 2]{ballard_target_2012}.
+Der Ablauf gliedert sich dabei in drei wesentliche Schritte: die Formulierung eines belastbaren Business Case, die Ableitung der Allowable Cost sowie einen initialen Marktabgleich zur Verifizierung der generellen Machbarkeit.
+Am Ausgangspunkt dieser Phase steht der Business Case, dessen Entstehung abhängig von den Interessen und Zielen des Bauherren stark variieren kann\autocite[S.20]{hill_target_2017}.
 
-“TVD begins in the project definition phase, starting with the development of a project business case and culminating in a funding decision.”
-“At the heart of TVD is the practice of setting project budgets based on the worth to the client of the asset to be constructed.”
-“A business plan validation study may take as little as three weeks and as long as three months…”
-“Engage the key members of the project team to validate the client’s business case…”
-\autocite[S. 2]{ballard_target_2012}
+Wer sind die Akteure? Bauherr + Dienstleister
 
-Testzitat \autocite[S.1]{hill_target_2017}
+Funktionsprogramm oder Leistungsprogramm 
 
+Ableitung der Allowable Cost als das was der Bauherr für den erwarteten Nutzen/Wert bereit ist zu zahlen\\
+Kostenschätzung - Estimated Cost (EC) meist basierend auf einem Benchmarking (historische Daten) oder parametrischen (Modell-)Simulationen \autocite[S.5]{ballard_target_2025}.\\
+Beide Ansätze sind ähnlich effektiv, wenn sie dem Projekt entsprechend gewählt und angewandt werden so Ballard (2025). Dementsprechend kann die Kostenschätzung mittels Modellsimulation bei Projekten mit verhältnismäßig hohem Innovationsgrad bessere Ergebnisse erzielen, als der Ansatz mit historischen Kostendaten und letztere umgekehrt bei häufiger Umgesetzten Projekttypen bzw. Designs eine verlässliche Kostenbasis liefern\autocite[S.5]{ballard_target_2025}.\\.
 
+Nachdem die beiden Größen AC und EC hinreichend genau definiert wurden erfolgt eine erste Validierung der Machbarkeit in Form einer einfachen Gap-Analyse. Dabei werden die Allowable Cost (AC) den Estimated Costs (EC) gegenübergestellt:
 
+\begin{itemize}[leftmargin=2em]
+    \item \textbf{Szenario A (EC $<$ AC)}: Das Projekt ist in der aktuellen Form nicht machbar. Anpassung der Ziele (Scope) oder Abbruch ("Revise or stop")
+    \item \textbf{Szenario B (EC $\le$ AC)}: Das Projekt ist machbar. Übergang zur Validierung.
+\end{itemize}
 
+Im Szenario A sind die Estimated Costs aus der Kostenschätzung höher als die vom Bauherren festgelegten Allowable Costs für das Projekt mit den zuvor definierten Anforderungen.
 
+Bauherr muss einschätzen EC = AC möglich?
 
-
-
-
+ja, EC = AC
+nein, Revision (Anpassung Scope) oder Abbruch. 
 
 
 
