--- a/02_mainmatter/ch2_Grundlagen.tex
+++ b/02_mainmatter/ch2_Grundlagen.tex
@@ -131,20 +131,18 @@ International: Hohe Erfolgsquoten im angelsächsischen Raum (USA, UK, Australien
 Deutschland: Das Thema gewinnt stark an Fahrt: es gibt eine wachsende Zahl an Pilotprojekten (Quelle: IPA-Report 2024 von haghsheno2025).\\
 
 Eine zentrale Kernmethode zur Kosten- und Wertsteuerung innerhalb dieser IPA-Modelle ist das Target Value Design.\\
+
 \clearpage
 
 \section{Target Value Design (TVD) als Kernmethode}
 \label{sec: 2.3}
 
-%Ziel:
-
-\subsection{TVD - Prozess oder Methode}
+\subsection{Begriffliche Einordnung und Definition}
 \label{sec: 2.3.1}
 
 % =======================================================
 % FÜR ABSCHNITT 2.3.1: TVD - Prozess oder Methode
 % =======================================================
-%https://service.tu-dortmund.de/group/intra/ausstattung-lokaler-arbeitsplatze
 %   - Ziel: Eine präzise und trennscharfe Definition von TVD für die
 %     vorliegende Arbeit herleiten. Es soll geklärt werden, ob TVD als
 %     Prozess, als Methode oder als beides zu verstehen ist, um eine
@@ -180,28 +178,55 @@ Glenn Ballard, der als einer Gründer des \ac{TVD} gilt, bezeichnet letzteres hi
 
 - Definition Prozess Vs. Methode: Verständnis als Management Methode die durch einen sturkturierten Prozess umgesetzt wird -> legitimiert die nachfolgende prozessoroentierte Darstelung.\\
 
-\subsection{Ziele und Grundprinzipien von TVD}
+\subsection{Historische Entwicklung}
 \label{sec: 2.3.2}
 
+Inhalt: Herleitung aus den drei historischen Strängen (vgl. Ballard, 2025, Kap. 3 ):\\
+Manufacturing: Target Costing bei Toyota (Produktionssystem) .\\
+UK: Cost Planning der Quantity Surveyors (1950er) .\\
+Finnland: Haahtela-Modell (1980er) .\\
+USA: Die Synthese zu "Lean TVD" (ab 2000er) .\\
 Ziel: Kosten als Inputgröße statt Outputgröße der Planung.\\
 
-Prinzipien:\\
-- Set-based Design\\
-- Collaborative Cost Estimation\\
-- Value Definition durch den Nutzer\\
-- Continuous Cost Validation\\
-- ggf. Bezug zu Lean-Grundsätzen (Wert, Fluss, Pull, Perfektion).\\
-
-\subsection{Prozessstruktur und Rollen im TVD-Prozess}
+\subsection{Handlungslogik und Kernprinzipien}
 \label{sec: 2.3.3}
 
-- Phasenstruktur nach Literatur\\
-- Rollen und Verantwortlichkeiten\\
-- Kommunikations- und Entscheidungslogik\\
-- Fazit / Relevanz für die Arbeit\\
+Target First: Kosten sind eine Design-Voraussetzung, kein Ergebnis.\\
 
-\subsection{Abgrenzung und Schnittstellen zu verwandten Methoden}
+Collaboration: Alle sitzen früh in einem Boot (Cross-funktionale Teams).\\
+
+Optimize the Whole: Projektziel vor Einzelziel.\\
+
+Continuous Improvement: Der Prozess ist nie "fertig", sondern wird iterativ verbessert.\\
+
+
+
+\subsection{Methoden und Werkzeuge}
 \label{sec: 2.3.4}
+
+Die operative Umsetzung der Zielkostenerreichung erfordert spezifische Methoden, die über die reine Kooperationsbereitschaft (vgl. \cref{sec: 2.2}) hinausgehen. Nach Ballard (2012) stützt sich der TVD-Prozess auf ein integriertes Set an Werkzeugen, welche die Designstrategie, die Entscheidungsfindung und die technische Datenverarbeitung steuern.\autocite[vgl. S. 15]{ballard_target_2012}
+
+\subsection*{Set-Based-Design}
+Set-Based Design (SBD): Definition als paralleles Entwickeln von Alternativen bis zum "Last Responsible Moment" (vgl. Ballard, 2025, S. 27; LCI 2016).
+
+\subsection*{Choosing By Advantages}
+Choosing By Advantages (CBA): Definition als Entscheidungsmethode basierend auf Vorteilen, nicht Gewichtungen
+
+\subsection*{A3-Methode bzw. Report}
+A3 Thinking / Reports: Definition als Problemlösungs- und Konsens-Werkzeug.
+
+\subsection*{Last Planner System}
+Last Planner System (LPS) in der Planung: Nutzung zur Steuerung des Design-Workflows (nicht nur Bau).
+
+\subsection*{Building Information Modelling}
+Im TVD-Kontext wird \ac{BIM} zur Datenbank für die Kostenkalkulation.\\
+Zweck: "Wir müssen alle 3 Wochen wissen, was es kostet."
+Funktion: Automatisierter Massenauszug (Quantity Take-Off). Wenn Sie eine Wand im Modell verschieben, ändert sich sofort die m²-Zahl in der Datenbank.\\
+Ziel: Geschwindigkeit..\\
+
+
+\subsection{Akteure und Organisationsstruktur}
+\label{sec: 2.3.5}
 
 - Unterschied zu Target Costing (Industrie) und Value Engineering (klassische Planung).\\
 
@@ -209,8 +234,6 @@ Prinzipien:\\
 
 - Relevanz: Warum TVD nicht nur Kostentechnik, sondern Führungsprinzip ist.\\
 
-\subsection{Fazit und Überleitung zur Methodik}
-\label{sec: 2.3.5}
 - TVD als prozessorientierte Managementmethode mit systematischer Kosten- und Wertsteuerung.\\
 
 Zur detaillierten Untersuchung dieses Prozesses im Kontext der deutschen Baupraxis wird im folgenden Kapitel das methodische Vorgehen beschrieben. Dabei wird zunächst das Forschungsdesign erläutert und anschließend dargelegt, wie der idealtypische TVD-Prozess systematisch analysiert und modelliert wird.
