--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -1,6 +1,5 @@
 \chapter{Analyse und Modellierung}
 \label{ch:4}
-
 \section{Das Phasenmodell}
 \label{sec:4.1}
 
@@ -26,10 +25,10 @@ Während das LCI-Modell 'Design' und 'Construction' in einer übergeordneten Pha
 Erster Entwurf/Wahl des Phasenmodells\\
 
 \begin{itemize}[leftmargin=2em]
-    \item \textbf{Phase 0}: Phase 0: Projektinitiierung \& Definition (Project Definition)
-    \item \textbf{Phase 1}: Validierung \& Zielsetzung (Validation \& Target Setting)
+    \item \textbf{Phase 0}: Phase 0: Projektinitiierung und Definition (Project Definition)
+    \item \textbf{Phase 1}: Validierung und Zielsetzung (Validation \& Target Setting)
     \item \textbf{Phase 2}: Wertorientierte Planung (Value Delivery / Design)
-    \item \textbf{Phase 3}: Realisierung \& Abschluss (Implementation \& Learning)
+    \item \textbf{Phase 3}: Realisierung und Abschluss (Implementation \& Learning)
 \end{itemize}
 
 \clearpage
@@ -39,8 +38,7 @@ Erster Entwurf/Wahl des Phasenmodells\\
 Die Phase der Projektdefinition und Wertbestimmung (Phase 0) bildet das fundamentale Ausgangsniveau des Target Value Design, in dem die Projektziele und der finanzielle Rahmen (Allowable Cost) ausschließlich auf Basis des Business Case und losgelöst von spezifischen Designlösungen festgelegt werden\autocite[S. 2]{ballard_target_2012}.
 Der Ablauf gliedert sich dabei in drei wesentliche Schritte: die Formulierung eines belastbaren Business Case, die Ableitung der Allowable Cost sowie einen initialen Marktabgleich zur Verifizierung der generellen Machbarkeit.
 Am Ausgangspunkt dieser Phase steht der Business Case, dessen Entstehung abhängig von den Interessen und Zielen des Bauherren stark variieren kann\autocite[S.20]{hill_target_2017}.
-
-Wer sind die Akteure? Bauherr + Dienstleister
+Hinsichtlich der Akteursbeteiligung ist Phase 0 durch eine Dominanz der Auftraggeber-Sphäre geprägt. Zwar können externe Berater oder Analysten zur Erstellung von Marktanalysen hinzugezogen werden, die Verantwortung für die Definition des Funktionsprogramms liegt jedoch exklusiv beim Bauherrn. Es gilt in dieser frühen Phase, das reine 'Leistungsprogramm' (Raumprogramm, technische Anforderungen) um die Dimension der 'Nutzerwerte' zu erweitern, die später als Entscheidungsgrundlage für Design-Alternativen dienen.
 
 Funktionsprogramm oder Leistungsprogramm 
 
@@ -63,17 +61,45 @@ ja, EC = AC
 nein, Revision (Anpassung Scope) oder Abbruch. 
 
 
+\clearpage
 
 
 
-
-
-
- \clearpage
+\FloatBarrier
+\clearpage
  
-\section{Phase 1 - Zielkostenentwicklung}
+\section{Phase 1 - Validierung und Zielkostenbestimmung}
 \label{sec:4.3}
-eng. Target Costing \& Target Definition
+
+
+
+
+Vertragliche Synchronisation der Interessen
+
+Eine valide Überprüfung des Business Case durch die ausführenden Unternehmen scheitert laut Ballard in der konventionellen Praxis häufig an der antagonistischen Vertragsstruktur und dem daraus resultierenden Misstrauen ('Adversarial Relationship'). Der Auftraggeber befürchtet hierbei opportunistisches Verhalten der Auftragnehmer.\autocite[vgl. S. 15]{ballard_target_2012}
+
+In der Validierungsphase des TVD wird dieses Prinzipal-Agent-Problem durch den Mechanismus des Painsharing aufgelöst. Da eine Überschreitung der Kostenziele direkt die Gewinnmargen der Projektpartner reduziert ('Reduced Profit Margin'), werden die kommerziellen Interessen von Auftraggeber und Auftragnehmern synchronisiert ('Alignment of Interests'). Dies stellt sicher, dass die Validierung des Business Case nicht durch Eigeninteressen verzerrt wird, sondern auf einer realistischen Einschätzung der Machbarkeit basiert.\autocite[vgl. S. 15]{ballard_target_2012}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+\clearpage
+
+\section{Phase 2 - Wertorientierte Planung}
+\label{sec:4.3}
+
+
 
 
 
@@ -95,32 +121,5 @@ eng. Target Costing \& Target Definition
 
 \clearpage
 
-\section{Phase 2 - Zielkostenentwicklung}
+\section{Phase 3 - Realisierung und Abschluss}
 \label{sec:4.3}
-eng. Target Costing \& Target Definition
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-\clearpage
-
-\section{Phase 3 - Zielkostenentwicklung}
-\label{sec:4.3}
-eng. Target Costing \& Target Definition
